--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/karekare.html" target="_self" rel="noopener noreferrer">Kare-kare</a>
+    <a href="./recipes/sarabasab.html" target="_self" rel="noopener noreferrer">Sarabasab</a>
+    
 </body>
 </html>
