Recipes completed. Sarabasab and Karekare.

--- a/recipes/sarabasab.html
+++ b/recipes/sarabasab.html
@@ -7,5 +7,30 @@
 </head>
 <body>
     <h1>Sarabasab</h1>
+    <h2>Grilled pork, umami goodness</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium eveniet porro temporibus pariatur mollitia amet totam sapiente expedita enim officia.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 kilo pork belly or pork shoulder, sliced into 2 cm thick pieces</li>
+        <li>3 tbsp sukang Ilocos or white vinegar</li>
+        <li>2 pcs red onions, chopped</li>
+        <li>1 tsp minced ginger</li>
+        <li>3 red chillies, sliced</li>
+        <li>freshly ground black pepper</li>
+        <li>1/2 cup calamansi juice or lemon juice</li>
+        <li>6 cloves garlic, minced</li>
+        <li>salt</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>In a covered container combine calamansi juice/lemon juice, garlic and salt together, add pork making sure its well coated. Cover container then let it marinate overnight.</li>
+        
+        <li>Prepare a charcoal grill, place pork on top of grill until its cooked. Let the charcoal flame once in a while as it adds flavour to the pork.</li>
+
+        <li>Remove pork from grill then chop them into small pieces.</li>
+
+        <li>Place in a serving platter mixed with the remaining ingredients.</li>
+    </ol>
 </body>
 </html>
